Cleanup, Original-files processing added including MP videos;

--- a/Google-Photos-Takeout-Converter/Google-Photos-Takeout-Converter.csproj
+++ b/Google-Photos-Takeout-Converter/Google-Photos-Takeout-Converter.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Google_Photos_Takout_Converter</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishAot>true</PublishAot>
+    <PublishAot>false</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
