--- a/MetadataProcessor/MetadataProcessor.csproj
+++ b/MetadataProcessor/MetadataProcessor.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
   </ItemGroup>
 
